# Sigil

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  build_error.txt  build_error_schema.txt  error_log.txt  errors.txt  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsc_output.txt  vite.config.ts
.agent/: task.md
.github/workflows/: ci.yml  playwright.yml  release.yml
docs/: AUDIT-NOTES.md  BACKENDS.md  MANUAL-TAURI-CHECKLIST.md  PERFORMANCE_AUDIT.md  SERVICE_CONNECTIVITY_AUDIT.md  UPGRADES.md
public/: inputfield.html  mic.html  oauth_kick.html  oauth_twitch.html  obs-captions.html
public/i18n/ar/: translation.json
public/i18n/bn/: translation.json
public/i18n/de/: translation.json
public/i18n/en/: translation.json
public/i18n/es/: translation.json
public/i18n/fr/: translation.json
public/i18n/hi/: translation.json
public/i18n/id/: translation.json
public/i18n/it/: translation.json
public/i18n/ja/: translation.json
public/i18n/ko/: translation.json
public/i18n/pl/: translation.json
public/i18n/pt_br/: translation.json
public/i18n/ru/: translation.json
public/i18n/th/: translation.json
public/i18n/tr/: translation.json
public/i18n/ur/: translation.json
public/i18n/vi/: translation.json
public/i18n/zh/: translation.json
public/i18n/zh_cn/: translation.json
public/i18n/zh_tw/: translation.json
scripts/: build-translations.py  check-i18n-keys.mjs  i18n-report-untranslated.mjs  sync-i18n-missing.mjs
src/: config.ts  i18n.ts  index.tsx  services-registry.ts  style.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: app_close.toml  get_native_features.toml  get_port.toml  oauth_loopback_start.toml
src-tauri/src/: main.rs
src-tauri/src/services/: chatterbox_tts.rs  fish_speech.rs  http_client.rs  kokoro_tts.rs  melo_tts.rs  mod.rs  moonshine_stt.rs  oauth_loopback.rs  osc.rs  translate.rs  voice_changer.rs  vosk_stt.rs  whisper.rs
src-tauri/src/services/audio/: mod.rs
src-tauri/src/services/keyboard/: mod.rs
src-tauri/src/services/uberduck_tts/: mod.rs
src-tauri/src/services/web/: assets.rs  mod.rs  peer.rs  pubsub.rs
src-tauri/src/services/windows_tts/: mod.rs
src/client/: index.ts
src/client/elements/: index.ts  schema.ts
src/client/migrate/: legacyDocument.ts
src/client/schema/: index.ts
src/client/ui/: element-instance.tsx  loading.module.css  view.tsx  view_loading.tsx
src/core/: index.ts  schema.ts
src/core/services/: history.ts  systemLog.ts
src/core/ui/: BottomPanel.tsx  CanvasToolbar.tsx  ControlBar.tsx  Dashboard.tsx  Drawer.tsx  ElementTypeIcon.tsx  HistoryPanel.tsx  Onboarding.tsx  QuickActionDock.tsx  StatsPanel.tsx  actionbar.tsx  canvas-drag-guide-state.ts  editor-view.tsx  element-transform.tsx  file-modal.tsx  overlay-input.tsx  projectFileActions.ts  shortcuts.ts  sidebar.tsx  store.ts
src/frontend-services/files/: index.ts
src/oauth/: bootstrap.ts
src/runtime/: host.ts
src/types/: vosk-browser.d.ts
src/utils/: devLog.ts  fetchWithTimeout.ts  index.ts  integrationEnv.ts  oauthPkce.ts  oauthPopup.ts
src_backup_20260108/: index.tsx  style.css
src_backup_20260108/client/elements/: schema.ts
src_backup_20260108/client/ui/: element-instance.tsx
stats/: rollup-stats.html
tests/: smoke.spec.ts
(+126 files in other folders)
