[package]
name = "sigil"
version = "0.2.0"
description = "Sigil desktop application"
authors = ["Curses", "Mewnah"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"

uwuify = "^0.2"

itertools = "0.10.5"
rosc = "0.9.1"
warp = "0.3.3"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
futures = "0.3.25"
windows = { version = "0.44.0", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Media_Speech",
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_WindowsProgramming",
] }
clap = { version = "4.4", features = ["derive"] }
local-ip-address = "0.4.9"
rodio = "^0.18"
reqwest = {version = "0.11.15", features = ["json", "stream", "blocking"] }
cpal = "0.15.2"
hound = "3.5.0"
zip = "0.6.6"
sha2 = "0.10"
hex = "0.4"
whisper-rs = "0.16"
rubato = "0.14"
vosk = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
default = ["custom-protocol"]
background_input = []
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.dev.package."*"]
opt-level = 3
